<resources>
    <string name="app_name">Sporyap</string>
    <string name="ready_for_action">Ready for action!</string>
    <string name="catch_soul_of_team">Catch soul of team!</string>
    <string name="sure_to_win">Be sure to win!</string>
    <string name="live_moment">Live the moment!</string>
    <string name="start">Start!</string>
    <string name="sign_up">Sign up!</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="login">Login</string>
    <string name="confirm_k_v_k_k">By logging in, you agree to the Personal Data Protection Law.</string>
    <string name="title_first" translatable="false">s</string>
    <string name="title_last" translatable="false">poryap</string>
    <string name="please_enter_your_personal_information">Enter your personal information</string>
    <string name="phone_or_mail">Phone or E-Mail</string>
    <string name="hint_email" translatable="false">E-Mail : example@example.com</string>
    <string name="hint_phone" translatable="false">(555) 555–55-55</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="create_password">Create a password</string>
    <string name="password_retry">Password (Retry)</string>
    <string name="save">Save</string>
    <string name="define_your_profile">How would you describe your profile?</string>
    <string name="corporate_name">Corporate Name</string>
    <string name="what_is_your_corporate_type">What kind of organization do you have?</string>
    <string name="athlete">Athlete</string>
    <string name="trainer">Trainer</string>
    <string name="corporate">Corporate</string>
    <string name="continue_text">Continue</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="facebook_app_id" translatable="false">993828411279825</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb993828411279825</string>
    <string name="facebook_client_token" translatable="false">4ebec98b6b60f5df2a1c0acfae731078</string>
    <string name="google_client_id" translatable="false">962868628106-e6ksujov1deggfrkvj2mf1drjlttj61a.apps.googleusercontent.com</string>
    <string name="google_client_secret" translatable="false">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</string>
    <string name="or">or</string>
    <string name="please_check_entered_information">Please check the entered information!</string>
    <string name="please_enter_phone_number">Please enter your phone number!</string>
    <string name="please_enter_email">Please enter your e-mail!</string>
    <string name="check_your_email_address">Please check your e-mail address</string>
    <string name="error_title">Error</string>
    <string name="user_login_successful">User login successful!</string>
    <string name="where_do_u_do_sport">Where do you do sport?</string>
    <string name="you_should_give_location_permission">You have to give location permission!</string>
    <string name="please_open_your_location_service">Please open your location.</string>
    <string name="confirm_your_location">Confirm your location.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_corporate_name">Please enter your corporate name.</string>
    <string name="please_select_corporate_type">Please choose your corporate type!</string>
    <string name="choose_your_corporate_location">Please select your corporate location.</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="events">Events</string>
    <string name="your_name">Name</string>
    <string name="last_name">Surname</string>
    <string name="mail">E-Mail : name@gmail.com</string>
    <string name="phone">Phone : (555) 555 55 55</string>
    <string name="which_sports_do_you">What kind of sports do you do?</string>
    <string name="which_sports_do_your_corporate">What kind of sports do you do at your organization?</string>
    <string name="complete">Complete</string>
    <string name="please_choose_at_least_one_sport">Please select at least one sport</string>
    <string name="what_sports_do_you_train">In which sports are the trainers?</string>
    <string name="sms_verification">I want to verify SMS</string>
    <string name="email_verification">I want to verify email</string>
    <string name="choose_your_verification_method">Choose your verification method</string>
    <string name="please_enter_confirmation_code">Please enter your confirmation code</string>
    <string name="create_new_password">Create a new password!</string>
    <string name="send">Send</string>
    <string name="your_password_not_equals">Passwords entered do not match!</string>
    <string name="choose_gender">Choose your gender</string>
    <string name="password_was_not_correct_format">The entered password cannot be less than 5 characters and not more than 20 characters!</string>
    <string name="corporate_types_could_not_get">Corporate types could not be listed!</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorites</string>
    <string name="add">Add</string>
    <string name="reserve">Create reservation</string>
    <string name="message">Message</string>
    <string name="home">Home Page</string>
    <string name="sport_profile">Sporty Profile</string>
    <string name="sport_career">Sporty Career</string>
    <string name="event_calendar">Event Calendar</string>
    <string name="calendar">Calendar</string>
    <string name="groups">Groups</string>
    <string name="teams">Teams</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="info_and_contracts">Information and terms</string>
    <string name="settings">Settings</string>
    <string name="location_hint">Location</string>
    <string name="corporate_sport_profile">Sporty profile of organization</string>
    <string name="birth_date_hint">Birth date</string>
    <string name="corporate_location_hint">Corporate location</string>
    <string name="trainer_profile_hint">Trainer profile</string>
    <string name="sport">Sport</string>
    <string name="event_type">Event type</string>
    <string name="event_category">Event category</string>
    <string name="event_owner_type">Event owner type</string>
    <string name="event_owner_type_desc">(Who creates it?)</string>
    <string name="participant_type">Participant type</string>
    <string name="participant_type_desc">(Who joins it?)</string>
    <string name="player_count">Player count</string>
    <string name="location_upper">LOCATION</string>
    <string name="facility">Facility</string>
    <string name="date_and_time">Date and time</string>
    <string name="date">Date</string>
    <string name="start_time_end_time">Start and finish time</string>
    <string name="today">Today</string>
    <string name="create_event">Create a new event</string>
    <string name="my_account">My account</string>
    <string name="please_enter_first_name">Please enter your name</string>
    <string name="please_enter_last_name">Please enter your surname</string>
    <string name="log_out">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="education">Education</string>
    <string name="training">Training</string>
    <string name="please_select_user_type">Please choose your user type!</string>
    <string name="sport_list_not_found">Sport list not found</string>
    <string name="enter_your_sms_code">Enter your SMS code</string>
    <string name="your_sur_name">Your surname</string>
    <string name="your_gender">Your gender</string>
    <string name="your_email">Your E-Mail</string>
    <string name="your_phone">Your phone</string>
    <string name="your_birth_day">Your birthday</string>
    <string name="your_country">Your country</string>
    <string name="your_city">Your city</string>
    <string name="your_district">Your district</string>
    <string name="your_location">Your location</string>
    <string name="your_new_password">Your new password</string>
    <string name="your_new_password_retry">Your new password (Retry)</string>
    <string name="name">Name</string>
    <string name="okay">Okay</string>
    <string name="please_enter_user_information">Please enter user information</string>
    <string name="please_enter_verification_code">Please enter the verification code</string>
    <string name="please_select_verification_type">Please enter verification type</string>
    <string name="location_could_not_be_found">Location could not be found</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="clock">Clock</string>
</resources>