<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_main_color"
    tools:context=".view.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_view_account"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/account"
        android:textColor="@android:color/white"
        android:background="@color/bg_profile_layout_color"
        android:textSize="22sp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/notifications"
        android:textColor="@android:color/white"
        android:background="@color/bg_profile_layout_color"
        android:textSize="22sp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/privacy"
        android:textColor="@android:color/white"
        android:background="@color/bg_profile_layout_color"
        android:textSize="22sp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:background="@color/bg_profile_layout_color"
        android:textSize="22sp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/info_and_contracts"
        android:textColor="@android:color/white"
        android:background="@color/bg_profile_layout_color"
        android:textSize="22sp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="16dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_log_out"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_out" />

</LinearLayout>