<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    tools:context=".view.signup.CreatePasswordFragment">

    <TextView
        android:id="@+id/text_view_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/create_password"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/edit_text_password"
        style="@style/EditTextStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_view_page_title"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_text_password_retry"
        style="@style/EditTextStyle"
        android:layout_below="@+id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:hint="@string/password_retry"
        android:inputType="textPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        style="@style/ButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/save"/>

</RelativeLayout>