<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_main_color"
    tools:context=".view.forgot_password.StartPasswordChangeFragment">


    <TextView
        android:id="@+id/text_view_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/your_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <EditText
        android:id="@+id/edit_text_email"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />


    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/EditTextStyle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:digits="0123456789+"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:autofillHints="phone"
        android:visibility="gone"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        style="@style/ButtonStyle"
        android:text="@string/send"/>

</LinearLayout>